--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,41 @@
 	            display: block;
 	        }
 
+	        .gpu-content-wrap {
+	            width: 100%;
+	            max-width: 1280px;
+	            padding-left: 24px;
+	            padding-right: 24px;
+	            margin-left: auto;
+	            margin-right: auto;
+	        }
+
+	        .gpu-hero-layout {
+	            width: 100%;
+	        }
+
 	        @media (min-width: 1024px) {
+	            .gpu-content-wrap {
+	                margin-left: 0;
+	                margin-right: 0;
+	            }
+
+	            .gpu-hero-layout {
+	                display: flex;
+	                align-items: flex-start;
+	                gap: 32px;
+	            }
+
+	            .gpu-hero-spacer {
+	                flex: 0 0 320px;
+	                width: 320px;
+	            }
+
+	            .gpu-hero-content {
+	                flex: 1 1 auto;
+	                min-width: 0;
+	            }
+
 	            .gpu-catalog-layout {
 	                display: flex;
 	                align-items: flex-start;
@@ -64,6 +98,10 @@
 
 	        /* Mobile: filters/sort live in a modal, opened by header buttons. */
 	        @media (max-width: 1023px) {
+	            .gpu-hero-spacer {
+	                display: none;
+	            }
+
 	            .gpu-catalog-sidebar {
 	                display: none;
 	            }
@@ -317,38 +355,43 @@
     <!-- HEADER PLACEHOLDER -->
     <div id="header-placeholder"></div>
 
-    <!-- CATALOG HERO & FILTERS -->
-    <section class="pt-24 md:pt-32 pb-10 md:pb-12 relative overflow-hidden">
-        <div class="absolute inset-0 bg-accent/5 -z-10"></div>
-        <div class="container mx-auto px-6 relative z-10 w-full max-w-7xl">
-            <div class="mb-6 md:mb-10">
-                <div class="flex items-start justify-between gap-4">
-                    <h1 class="text-4xl md:text-6xl font-black uppercase tracking-tighter">
-                        Каталог <span class="text-accent">ГПУ</span>
-                    </h1>
+	    <!-- CATALOG HERO & FILTERS -->
+	    <section class="pt-24 md:pt-32 pb-10 md:pb-12 relative overflow-hidden">
+	        <div class="absolute inset-0 bg-accent/5 -z-10"></div>
+	        <div class="gpu-hero-layout relative z-10">
+	            <div class="gpu-hero-spacer"></div>
+	            <div class="gpu-hero-content">
+	                <div class="gpu-content-wrap">
+	                    <div class="mb-6 md:mb-10">
+	                        <div class="flex items-start justify-between gap-4">
+	                            <h1 class="text-4xl md:text-6xl font-black uppercase tracking-tighter">
+	                                Каталог <span class="text-accent">ГПУ</span>
+	                            </h1>
+	
+	                            <div class="lg:hidden flex items-center gap-2 pt-1">
+	                                <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn"
+	                                    aria-label="Сортировка">
+	                                    <i class="fa-solid fa-arrow-down-wide-short"></i>
+	                                </button>
+	                                <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn"
+	                                    aria-label="Фильтр">
+	                                    <i class="fa-solid fa-sliders"></i>
+	                                    <span id="gpu-mobile-badge" class="gpu-mobile-icon-badge">0</span>
+	                                </button>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </section>
 
-                    <div class="lg:hidden flex items-center gap-2 pt-1">
-                        <button type="button" id="gpu-mobile-sort-open" class="gpu-mobile-icon-btn"
-                            aria-label="Сортировка">
-                            <i class="fa-solid fa-arrow-down-wide-short"></i>
-                        </button>
-                        <button type="button" id="gpu-mobile-filter-open" class="gpu-mobile-icon-btn"
-                            aria-label="Фильтр">
-                            <i class="fa-solid fa-sliders"></i>
-                            <span id="gpu-mobile-badge" class="gpu-mobile-icon-badge">0</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- MAIN GRID -->
-	    <main class="max-w-7xl mx-auto px-6 pb-24">
-	        <div class="gpu-catalog-layout">
-	            <!-- SIDEBAR FILTERS (desktop left column; mobile opens in modal) -->
-	            <aside class="gpu-catalog-sidebar pb-10">
-	                <div class="gpu-catalog-sidebar-panel">
+	    <!-- MAIN GRID -->
+		    <main class="pb-24">
+		        <div class="gpu-catalog-layout">
+		            <!-- SIDEBAR FILTERS (desktop left column; mobile opens in modal) -->
+		            <aside class="gpu-catalog-sidebar pb-10">
+		                <div class="gpu-catalog-sidebar-panel">
 	                    <div class="gpu-mobile-sheet">
 	                        <div class="gpu-mobile-sheet-header px-4 py-3 flex items-center justify-between gap-3">
 	                            <div class="text-xs font-black uppercase tracking-[0.22em] text-slate-900">
@@ -703,15 +746,17 @@
 		                        </div>
 	                            </form>
 	                        </div>
-	                    </div>
-	                </div>
-	            </aside>
-	
-	            <div class="gpu-catalog-content">
-	                <div id="gpu-grid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8"></div>
-	            </div>
-	        </div>
-	    </main>
+		                    </div>
+		                </div>
+		            </aside>
+		
+		            <div class="gpu-catalog-content">
+		                <div class="gpu-content-wrap">
+		                    <div id="gpu-grid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8"></div>
+		                </div>
+		            </div>
+		        </div>
+		    </main>
 
     <!-- FOOTER PLACEHOLDER -->
     <div id="footer-placeholder"></div>
